@@ -128,4 +128,4 @@ wish to be listed under a different name or address, you should submit a pull
 request to the .mailmap file to contain the correct mapping.
 
 This file was generated via Dist::Zilla::Plugin::GenerateFile::FromShareDir 0.013 from a
-template file originating in Dist-Zilla-PluginBundle-DROLSKY-0.78.
+template file originating in Dist-Zilla-PluginBundle-MAXMIND-0.80.
