@@ -1,4 +1,4 @@
-# This file was automatically generated by Dist::Zilla::Plugin::MakeMaker v6.008.
+# This file was automatically generated by Dist::Zilla::Plugin::MakeMaker v6.009.
 use strict;
 use warnings;
 
@@ -43,7 +43,6 @@ my %WriteMakefileArgs = (
     "Try::Tiny" => 0,
     "URI" => 0,
     "lib" => 0,
-    "namespace::autoclean" => 0,
     "namespace::clean" => 0,
     "strict" => 0,
     "warnings" => 0
@@ -106,7 +105,6 @@ my %FallbackPrereqs = (
   "URI" => 0,
   "base" => 0,
   "lib" => 0,
-  "namespace::autoclean" => 0,
   "namespace::clean" => 0,
   "strict" => 0,
   "utf8" => 0,
