@@ -6,9 +6,10 @@ use warnings;
 our $VERSION = '2.003004';
 
 use Moo;
-use namespace::autoclean;
 
 use GeoIP2::Types qw( NonNegativeInt Str );
+
+use namespace::clean -except => 'meta';
 
 has code => (
     is        => 'ro',
