@@ -6,10 +6,11 @@ use warnings;
 our $VERSION = '2.003004';
 
 use Moo;
-use namespace::autoclean;
 
 use GeoIP2::Types qw( Bool BoolCoercion IPAddress NonNegativeInt Str );
 use Sub::Quote qw( quote_sub );
+
+use namespace::clean -except => 'meta';
 
 with 'GeoIP2::Role::HasIPAddress';
 
