@@ -6,9 +6,10 @@ use warnings;
 our $VERSION = '2.003004';
 
 use Moo::Role;
-use namespace::autoclean;
 
 use GeoIP2::Types qw( HTTPStatus Str URIObject );
+
+use namespace::clean;
 
 has http_status => (
     is       => 'ro',
