@@ -6,9 +6,10 @@ use warnings;
 our $VERSION = '2.003004';
 
 use Moo::Role;
-use namespace::autoclean;
 
 use GeoIP2::Types qw( IPAddress );
+
+use namespace::clean;
 
 has ip_address => (
     is       => 'ro',
