@@ -6,9 +6,10 @@ use warnings;
 our $VERSION = '2.003004';
 
 use Moo::Role;
-use namespace::autoclean;
 
 use GeoIP2::Types qw( NonNegativeInt PositiveInt Str );
+
+use namespace::clean;
 
 with 'GeoIP2::Role::Record::HasNames';
 
