@@ -8,7 +8,6 @@ use warnings;
 our $VERSION = '2.003004';
 
 use Moo;
-use namespace::autoclean;
 
 use Data::Validate::IP 0.19 qw( is_public_ipv4 is_public_ipv6 );
 use GeoIP2::Error::Generic;
@@ -31,6 +30,8 @@ use Scalar::Util qw( blessed );
 use Sub::Quote qw( quote_sub );
 use Try::Tiny;
 use URI;
+
+use namespace::clean -except => 'meta';
 
 with 'GeoIP2::Role::HasLocales';
 
