@@ -1,5 +1,10 @@
 {{$NEXT}}
 
+- Replace use of namespace::autoclean with namespace::clean.
+  namespace::autoclean appears to be causing occasional load-order compilation
+  failures when the GeoIP2 Moo classes are inflated into Moose classes.
+
+
 2.003003 2017-01-04
 
 [ ENHANCEMENTS ]
